<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn= "navigation_view" >

    <group android:checkableBehavior="single">

        <item
            android:icon="@drawable/ic_home"
            android:id="@+id/nav_home"
            android:title="@string/nav_drawer_home"
            />
    </group>

    <item android:title="@string/nav_drawer_other">

        <menu>
            <item
                android:icon="@drawable/ic_profile"
                android:id="@+id/nav_profile"
                android:title="@string/nav_drawer_profile"/>

            <item
                android:icon="@drawable/ic_settings"
                android:id="@+id/nav_settings"
                android:title="@string/nav_drawer_settings"/>

        </menu>

    </item>



</menu>